k8s/02-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: nginx
        image: nginx:latest      
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: app-storage
          mountPath: /tmp/data
      volumes:
      - name: app-storage
        persistentVolumeClaim:
          claimName: app-pvc
