k8s/03-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: test
  labels:
    app: my-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
      - name: my-app-container
        image: nginx:1.14.2
        ports:
        - containerPort: 80
        volumeMounts:
        - name: my-app-storage
          mountPath: /var/log/nginx
      resources:
        limits:
          memory: "128Mi"
          cpu: "400m"
        requests:
          memory: "64Mi"
          cpu: "150m"
      volumes:
        - name: my-app-storage
          persistentVolumeClaim:
            claimName: my-app-pvc
