k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: accounting-service
  labels:
    app: accounting
spec:
  type: ClusterIP
  selector:
    app: accounting
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
