k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: test
  labels:
    app: my-app
spec:
  type: ClusterIP
  selector:
    app: my-app
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
